letter spacing fix on product detail page

--- a/src/pages/productDetailPages/ProductDetailPage.module.css
+++ b/src/pages/productDetailPages/ProductDetailPage.module.css
@@ -469,7 +469,6 @@ html {
 
   .titleItem {
     color: var(--text-color-dark);
-    letter-spacing: 0.3rem;
   }
 
   .brand {
